--- a/lab1_styles.css
+++ b/lab1_styles.css
@@ -6,6 +6,11 @@ body {
     font-size: 36pt;
     font-family: sans-serif;
     height: 60px;
+    border-bottom: 1px solid gray;
+    padding: 10px;
+    text-shadow: 3px 3px #ff0000;
+     box-shadow: 5px 20px #888888;
+    
 }
 
 .container {
@@ -14,11 +19,12 @@ body {
 }
 
 .sidebar {
-    width: 180px;
+    width: 170px;
     background: #ff6677;
     position: absolute;
     top: 0;
     height: 100%;
+    padding: 15px;
 }
 
 .main-content {
@@ -26,4 +32,11 @@ body {
     position: absolute;
     top: 0;
     left: 200px;
+    border: 5px solid blue;
+    margin: 5px;
+    padding: 0px 15px 10px 15px;
+}
+
+a {
+    text-decoration: none;
 }
